# ssl-proxy

./: CMakeLists.txt  connection.h  echo_client.cpp  echo_server.cpp  main.cpp  selector.cpp  selector.h  server.cpp  server.h  ssl_connection.h  ssl_echo_server.cpp
certs/: localhost.crt  localhost.csr  localhost.key  rootCA.crt  rootCA.key  rootCA.srl
